trunk/Archive2/84/75ab959dea4c43/output
main.cpp:12:29: error: no matching function for call to 'make_shared'
    std::shared_ptr<B> b2 = std::make_shared<B, A *>(a);
                            ^~~~~~~~~~~~~~~~~~~~~~~~
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.2.0/../../../../include/c++/5.2.0/bits/shared_ptr.h:626:5: note: candidate function [with _Tp = B, _Args = <A *>] not viable: no known conversion from 'A *' to 'A *&&' for 1st argument
    make_shared(_Args&&... __args)
    ^
1 error generated.
